# Euler

./: .gitignore  LICENSE  README.md  benchmark.py  pyproject.toml
euler_agent/: __init__.py  agent.py  audit.py  autopilot.py  avatar.py  cli.py  code_graph.py  config.py  guardrails.py  lang_converter.py  memory.py  providers.py  repl.py  semantic_index.py  tools.py
euler_agent/agent_modes/: __init__.py  architect.py  assistant.py  basic.py  coder.py  db.py  devops.py  documenter.py  patch.py  refactor.py  registry.py  security.py  swarm.py  tester.py  types.py
euler_agent/analysis/: __init__.py  code_graph.py  semantic_index.py  tfidf.py
euler_agent/config/: __init__.py  context.py  settings.py
euler_agent/core/: __init__.py  agent.py  autopilot.py  prompts.py  providers.py  skills.py
euler_agent/guards/: __init__.py  guardrails.py  safety.py
euler_agent/memory/: __init__.py  store.py
euler_agent/optimization/: __init__.py  token_optimizer.py
euler_agent/repl_support/: __init__.py  constants.py  models.py  parsing.py  patching.py  references.py
euler_agent/session/: __init__.py  checkpoint.py
euler_agent/tools/: __init__.py  converter.py  ops.py
euler_agent/ui/: __init__.py
